# gamepad_picow

./: README.md
client/: hid_gamepad.c
host/: CMakeLists.txt
host/example/: CMakeLists.txt  example.cpp
host/include/pico_dualsense/: ht16k33.h  ws2812.h
host/src/: dualsense_l2cap.cpp  ht16k33.c  ws2812.c
